# Donkey-Ai

./: README.md
stt-api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_test_main.py  pyproject.toml
stt-api/app/: __init__.py  config.py  main.py
stt-api/app/services/: __init__.py  audio.py  diarization.py  pipeline.py  postprocessing.py  transcription.py
stt-api/test_sample/: test.m4a
stt_inference_server/: .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  requirements.txt
stt_inference_server/api/: transcribe.py
stt_inference_server/models/: __init__.py  loader.py
stt_inference_server/services/: __init__.py  alignment_service.py  diarization_service.py  stt_service.py
stt_inference_server/utils/: audio.py  temp_file.py
